# anyrun-provider

./: Cargo.toml  README.md  flake.nix
anyrun-provider-ipc/: Cargo.toml
anyrun-provider-ipc/src/: lib.rs
src/: main.rs
