[workspace]
members = [
  "anyrun-provider-ipc"
]

[package]
name = "anyrun-provider"
version = "25.9.0"
edition = "2024"

[workspace.dependencies]
anyrun-interface = { git = "https://github.com/anyrun-org/anyrun-interface", branch = "anyrun-provider" }

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
anyrun-interface.workspace = true
anyrun-provider-ipc = { path = "./anyrun-provider-ipc" }
